[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hexlet-code"  # Важно: должно совпадать с именем папки пакета
version = "0.1.0"
dependencies = [
    "Flask",
    "gunicorn",
    "python-dotenv"
]

[tool.render]
start-command = "gunicorn -w 4 -b 0.0.0.0:$PORT page_analyzer:app"